fixed wrong height number in statistics block

--- a/css/main.scss
+++ b/css/main.scss
@@ -290,7 +290,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-height: 260px;
+    max-height: 270px;
     overflow: hidden;
   }
 
